# ares-insight

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keepalive.yml
app/: requirements.txt  streamlit_app.py
scripts/: backfill_embeddings.py  backfill_name_norm.py  run_ingest.py  run_query.py
src/ares_insight/: __init__.py  config.py
src/ares_insight/api/: main.py
src/ares_insight/graph/: connection.py  schema.py
src/ares_insight/ingest/: fetch.py  load.py  transform.py
src/ares_insight/observability/: langfuse_setup.py
src/ares_insight/query/: answer.py  cypher_chain.py  embeddings.py  router.py  subgraph.py
tests/: test_api.py  test_config.py  test_query.py  test_router.py  test_subgraph.py  test_transform.py
